# asker

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
api/: dependencies.py  endpoints.py
api/documents/: crud.py  dependencies.py  models.py  router.py  utils.py
api/message/: crud.py  dependencies.py  models.py  router.py  schemas.py
asker/: __init__.py  db.py  main.py  settings.py
migrations/: env.py  script.py.mako
migrations/versions/: 1156b926f2a9_init.py
ml/: __init__.py  llm.py
static/css/: style.css
static/js/: script.js
templates/: index.html
