[project]
name = "asker"
version = "0.1.0"
description = ""
authors = [
    {name = "i.kravets",email = "illia.kravets09@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "alembic (>=1.16.1,<2.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "greenlet (>=3.2.3,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
